# advent-of-code-2024

./: .aider.chat.history.md  README.md  pyproject.toml
src/advent_of_code_2024/: main.py
