[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pascal Jerome", email = "pascal@reflectionanalytics.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/advent_of_code_2024"]
